--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#7406A2"
+    android:background="#1E98D7"
     tools:context=".PerfilFragment">
 
     <!-- TODO: Update blank fragment layout -->
