--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:visibility="visible"
                 android:id="@+id/imageView"
                 android:layout_width="160dp"
                 android:layout_height="148dp"
