--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -15,4 +15,15 @@
         android:textSize="26dp"
         android:textColor="@color/white"/>
 
+    <Button
+        android:id="@+id/botonLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="100dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:text="Cerrar sesión"
+        android:textColor="@android:color/white" />
+
+
 </FrameLayout>
