--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/correologin"
                 app:layout_constraintVertical_bias="0.511" />
 
-
+            <Button
+                android:id="@+id/botonlogin"
+                android:layout_width="255dp"
+                android:layout_height="44dp"
+                android:background="@drawable/boton_background"
+                android:padding="12dp"
+                android:text="Iniciar sesión"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.817"
+                app:layout_constraintWidth_percent="0.8" />
 
             <TextView
                 android:id="@+id/textView"
@@ -119,38 +133,18 @@
                 app:layout_constraintVertical_bias="0.569" />
 
             <Button
-                android:id="@+id/botonlogin"
-                android:layout_width="255dp"
-                android:layout_height="48dp"
-                android:background="@drawable/boton_background"
-                android:padding="12dp"
-                android:text="Iniciar sesión"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.817"
-                app:layout_constraintWidth_percent="0.8" />
-
-            <Button
                 android:id="@+id/botonlogingoogle"
                 android:layout_width="255dp"
-                android:layout_height="48dp"
+                android:layout_height="44dp"
                 android:background="@drawable/boton_background"
-                android:padding="12dp"
+                android:onClick="autentificarGoogle"
                 android:text="Iniciar con Google"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
+                android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.941"
-                app:layout_constraintWidth_percent="0.8" />
-
-
+                app:layout_constraintVertical_bias="0.941" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
