--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,41 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/ tools"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
-    <!--<item android:id="@+id/action_settings"
-        android:title="Preferencias"
+
+    <!-- Opción del menu superior" -->
+    <item
+        android:id="@+id/action_settings"
+        android:title="Home"
         android:icon="@android:drawable/ic_menu_preferences"
         android:orderInCategory="5"
-        app:showAsAction="never"/>-->
-    <item android:title="Acerca de..."
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/item_sub_option1"
+        android:title="Add"
+        android:icon="@android:drawable/ic_menu_info_details"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/item_sub_option2"
+        android:title="Perfil"
+        android:icon="@android:drawable/ic_menu_share"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_close_session"
+        android:title="Cerrar Sesión"
+        android:icon="@android:drawable/ic_lock_power_off"
+        android:orderInCategory="99"
+        app:showAsAction="never" />
+
+
+    <!-- Opción "Acerca de..." en el menú principal -->
+    <item
         android:id="@+id/acercaDe"
+        android:title="Acerca de"
         android:icon="@android:drawable/ic_menu_info_details"
         android:orderInCategory="10"
         app:showAsAction="ifRoom|withText"/>
+
 </menu>
