--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,17 +24,15 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:visibility="visible"
                 android:id="@+id/imageView"
                 android:layout_width="160dp"
                 android:layout_height="148dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="parent"
+                android:src="@drawable/smartnaturelogo"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                tools:srcCompat="@drawable/smartnaturelogo" />
+                app:layout_constraintBottom_toTopOf="@id/correologin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintVertical_bias="0.2" />
 
 
             <EditText
