--- a/app/src/main/res/layout/acerca_de.xml
+++ b/app/src/main/res/layout/acerca_de.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/TextView01"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="16dp"
-    android:text="Este programa ha sido desarrollado como ejemplo en el curso de
-Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad
-principal.">
-</TextView>
+    android:layout_gravity="center"
+    android:elevation="8dp">
+
+
+    <!-- Descripción -->
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Somos una empresa dedicada a la innovación tecnológica en parques. Diseñamos bastones con sensores que mejoran la experiencia de los visitantes al detectar cambios en el entorno y proporcionar información útil en tiempo real."
+        android:textSize="14sp"
+        android:textColor="@android:color/black"
+        android:gravity="center" />
+</LinearLayout>
