Añadido PublicarFragment, imagenes y fuente Comfortaa

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -17,4 +17,9 @@
         android:icon="@drawable/baseline_person_24"
         android:title="Profile" />
 
+    <item
+        android:id="@+id/nav_publish"
+        android:icon="@drawable/camara"
+        android:title="Publicar" />
+
 </menu>
