--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,10 +53,10 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="8dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_launcher_foreground"
-            android:layout_marginTop="8dp" />
+            android:src="@drawable/ic_launcher_foreground" />
     </LinearLayout>
 
     <TextView
