--- a/app/src/main/res/layout/fragment_farolas.xml
+++ b/app/src/main/res/layout/fragment_farolas.xml
@@ -21,11 +21,20 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- Contenedor de galería -->
+    <!-- Contenedor de galería y selector de farolas -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <!-- Spinner para seleccionar Farola -->
+        <Spinner
+            android:id="@+id/farolaSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:padding="8dp" />
 
         <!-- ViewPager2 para galería de fotos -->
         <androidx.viewpager2.widget.ViewPager2
@@ -33,17 +42,18 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginTop="8dp" />
-
-        <!-- Botón debajo de la galería -->
-        <Button
-            android:id="@+id/selectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Empezar Ruta"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp" />
     </LinearLayout>
 
+    <!-- Botón de acción -->
+    <Button
+        android:id="@+id/selectButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Empezar Ruta"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
+
+    <!-- Título para datos de sensores -->
     <TextView
         android:id="@+id/tv_welcome2"
         android:layout_width="wrap_content"
@@ -52,7 +62,9 @@
         android:text="Datos de la Farola:"
         android:textSize="18sp"
         android:textStyle="normal"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp" />
 
     <!-- RecyclerView para mostrar datos -->
     <androidx.recyclerview.widget.RecyclerView
