--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -160,6 +160,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Correo:"
+                    android:fontFamily="@font/comfortaa"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.132"
@@ -172,6 +174,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Contraseña:"
+                    android:fontFamily="@font/comfortaa"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.144"
@@ -184,6 +187,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nombre:"
+                    android:fontFamily="@font/comfortaa"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.132"
@@ -197,6 +202,7 @@
                     android:layout_height="35dp"
                     android:background="@drawable/boton_cerrarsesion"
                     android:onClick="logout"
+                    android:fontFamily="@font/comfortaa"
                     android:text="Cerrar Sesión"
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -213,6 +219,7 @@
                     android:text="Mi Perfil"
                     android:textColor="#000000"
                     android:textSize="40sp"
+                    android:fontFamily="@font/comfortaa"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
