--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,8 @@
                 app:layout_constraintHorizontal_bias="0.515"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.8" />
+                app:layout_constraintWidth_percent="0.8"
+                android:fontFamily="@font/comfortaa"/>
 
             <EditText
                 android:id="@+id/contrasenalogin"
@@ -63,7 +64,8 @@
                 app:layout_constraintHorizontal_bias="0.515"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/correologin"
-                app:layout_constraintWidth_percent="0.8" />
+                app:layout_constraintWidth_percent="0.8"
+                android:fontFamily="@font/comfortaa"/>
 
             <TextView
                 android:id="@+id/textView2"
@@ -75,7 +77,8 @@
                 app:layout_constraintHorizontal_bias="0.188"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/correologin"
-                app:layout_constraintVertical_bias="0.511" />
+                app:layout_constraintVertical_bias="0.511"
+                android:fontFamily="@font/comfortaa"/>
 
             <Button
                 android:id="@+id/botonlogin"
@@ -91,7 +94,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.817"
-                app:layout_constraintWidth_percent="0.8" />
+                app:layout_constraintWidth_percent="0.8"
+                android:fontFamily="@font/comfortaa"/>
 
             <TextView
                 android:id="@+id/textView"
@@ -103,7 +107,8 @@
                 app:layout_constraintHorizontal_bias="0.156"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.327" />
+                app:layout_constraintVertical_bias="0.327"
+                android:fontFamily="@font/comfortaa"/>
 
             <TextView
                 android:id="@+id/textView3"
@@ -115,7 +120,8 @@
                 app:layout_constraintHorizontal_bias="0.159"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/contrasenalogin"
-                app:layout_constraintVertical_bias="0.538" />
+                app:layout_constraintVertical_bias="0.538"
+                android:fontFamily="@font/comfortaa"/>
 
             <TextView
                 android:id="@+id/botonregistrar"
@@ -128,7 +134,8 @@
                 app:layout_constraintHorizontal_bias="0.874"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/contrasenalogin"
-                app:layout_constraintVertical_bias="0.569" />
+                app:layout_constraintVertical_bias="0.569"
+                android:fontFamily="@font/comfortaa"/>
 
             <Button
                 android:id="@+id/botonlogingoogle"
@@ -142,7 +149,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.941" />
+                app:layout_constraintVertical_bias="0.941"
+                android:fontFamily="@font/comfortaa"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
