--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -49,7 +49,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.553"
-                    app:layout_constraintWidth_percent="0.8" />
+                    app:layout_constraintWidth_percent="0.8"
+                    android:fontFamily="@font/comfortaa"/>
 
                 <EditText
                     android:id="@+id/correo_register"
@@ -65,7 +66,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.331"
-                    app:layout_constraintWidth_percent="0.8" />
+                    app:layout_constraintWidth_percent="0.8"
+                    android:fontFamily="@font/comfortaa"/>
 
                 <TextView
                     android:id="@+id/textView4"
@@ -77,7 +79,8 @@
                     app:layout_constraintHorizontal_bias="0.155"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.299" />
+                    app:layout_constraintVertical_bias="0.299"
+                    android:fontFamily="@font/comfortaa"/>
 
                 <TextView
                     android:id="@+id/textView6"
@@ -88,7 +91,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.155"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:fontFamily="@font/comfortaa"/>
 
                 <EditText
                     android:id="@+id/contrasenya_register"
@@ -104,7 +108,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.768"
-                    app:layout_constraintWidth_percent="0.8" />
+                    app:layout_constraintWidth_percent="0.8"
+                    android:fontFamily="@font/comfortaa"/>
 
                 <Button
                     android:id="@+id/register_button"
@@ -119,7 +124,8 @@
                     app:layout_constraintHorizontal_bias="0.507"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.944" />
+                    app:layout_constraintVertical_bias="0.944"
+                    android:fontFamily="@font/comfortaa"/>
 
                 <TextView
                     android:id="@+id/textView5"
@@ -131,7 +137,8 @@
                     app:layout_constraintHorizontal_bias="0.183"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.679" />
+                    app:layout_constraintVertical_bias="0.679"
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
