--- a/app/src/main/res/layout/rutas_item.xml
+++ b/app/src/main/res/layout/rutas_item.xml
@@ -1,33 +1,47 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:layout_marginBottom="10dp"
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="8dp" />
+    android:background="@drawable/border_background">
 
+    <!-- Layout principal dividido en dos secciones -->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
+        <!-- Texto Título -->
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
-            android:textStyle="bold" />
+            android:text="Temperatura"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            android:fontFamily="@font/comfortaa"/>
 
+        <!-- Texto Valor -->
         <TextView
             android:id="@+id/tv_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Value" />
+            android:text="22 ºC"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:fontFamily="@font/comfortaa"/>
     </LinearLayout>
+
+    <!-- Icono alineado a la derecha -->
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
